# pycounts

./: CONTRIBUTING.md  README.md  pycount.py  pyproject.toml
docs/: example.ipynb  make.bat
pythonpackage/: CHANGELOG.md  LICENSE  pyproject.toml
pythonpackage/docs/: Makefile  conf.py
pythonpackage/src/pycounts/: __init__.py
pythonpackage/tests/: test_pythonpackage.py
src/pycounts/: __init__.py
